# S4G_Showcase

./: README.md
Epitech_Arcade/: CMakeLists.txt  README.md
Epitech_Arcade/core/: core.cpp  core.hpp  lib_handler.hpp  main.cpp  menu.cpp  menu.hpp  selectable.cpp  selectable.hpp
Epitech_Arcade/lib/centipede/: box.cpp  box.hpp  centipede.cpp  centipede.hpp  centipedeSegments.cpp  centipedeSegments.hpp  game.cpp  game.hpp  ship.cpp  ship.hpp
Epitech_Arcade/lib/ncurses/: library.cpp  library.hpp
Epitech_Arcade/lib/nibbler/include/: apple.hpp  game.hpp  snake.hpp  snakeSegments.hpp
Epitech_Arcade/lib/nibbler/src/: apple.cpp  game.cpp  snake.cpp  snakeSegments.cpp
Epitech_Arcade/lib/sfml/: library.cpp  library.hpp
Epitech_Arcade/lib/toto/: library.cpp  library.hpp
Epitech_Arcade/lib_include/: game_interface.hpp  gfx_interface.hpp
Epitech_Indie-Studio/: CMakeLists.txt  README.md  fixed_tinyobj_loader_c.h
Epitech_Indie-Studio/data/: settings
Epitech_Indie-Studio/resources/models/bomberman/animations/die/: death_000063.mtl
Epitech_Indie-Studio/src/: Animation.cpp  Animation.hpp  AssetLoader.cpp  AssetLoader.hpp  Bomb.cpp  Bomb.hpp  Chest.cpp  Chest.hpp  Cube.cpp  Cube.hpp  ExplosionParticle.cpp  ExplosionParticle.hpp  Game.cpp  Game.hpp  IGameObject.hpp  Player.cpp  Player.hpp  PlayerConfigs.cpp  PlayerConfigs.hpp  Rotation.cpp  Rotation.hpp  SaveLoader.cpp  SaveLoader.hpp  bomberman.hpp  main.cpp
Epitech_Indie-Studio/src/2D/: Button.cpp  Button.hpp  IGameObject2D.hpp  LabeledButton.cpp  LabeledButton.hpp  MainMenu.cpp  MainMenu.hpp  MySprite.cpp  MySprite.hpp  PlayerStats.cpp  PlayerStats.hpp  Text.cpp  Text.hpp
Epitech_Indie-Studio/src/AI/: PlayerAI.cpp  PlayerAI.hpp
Epitech_Indie-Studio/src/powerUps/: BombUp.cpp  BombUp.hpp  FireUp.cpp  FireUp.hpp  SpeedUp.cpp  SpeedUp.hpp  WallPass.cpp  WallPass.hpp
Unity-3D_Workshop/: README.md
